--- a/app/templates/receptionist/schedule/schedule.html
+++ b/app/templates/receptionist/schedule/schedule.html
@@ -146,7 +146,7 @@
                         <!-- Modal for Delete Confirmation -->
                         <div id="deleteModal" class="modal">
                             <div class="modal-content">
-                                <p>Are you sure you want to delete this appointment?</p>
+                                <p>Are you sure you want to delete this schedule?</p>
                                 <div class="modal-buttons">
                                     <button class="delete-modal-button" onclick="deleteAppointment()">Yes, delete it!</button>
                                     <button class="cancel-modal-button">Cancel</button>
@@ -154,7 +154,7 @@
                             </div>
                         </div>
                         
-                        <!-- Modal for Edit Appointment -->
+                        <!-- Modal for Edit Schedule -->
                         <div class="doccare-edit-container" id="editModal">
                             <span class="material-symbols-outlined arrow" id="arrow">arrow_back</span>
                             <header>RESCHEDULE</header>
@@ -257,7 +257,7 @@
                         <!-- Include these script tags at the end of the body content -->
                         <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
                         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-                        <script src="{{ url_for('static', filename='schedule_script.js') }}" defer></script>
+                        <script src="{{ url_for('static', filename='schedule_script.js') }}"> </script>
                         <script src="{{ url_for('static', filename='logout.js') }}"></script>                    
                     </main>
                 </div>
