--- a/app/static/schedule_add_style.css
+++ b/app/static/schedule_add_style.css
@@ -19,15 +19,16 @@ body {
     border-radius: 10px;
     background: #FFF;
     padding: 30px;
-    margin: 0 20px;
+    margin: 0 auto; /* Center the container horizontally */
     box-shadow: 0px 0px 20px 0px rgba(2, 119, 189, 0.50);
 }
+
 
 .doccare-edit-container header {
     font-size: 20px;
     font-weight: 600;
     color: #333;
-    margin-left: calc(100% / 2.2);
+    text-align: center; /* Center the header text */
 }
 
 .doccare-edit-container form {
@@ -44,8 +45,9 @@ body {
     display: block;
     font-size: 32px;
     font-weight: 600;
-    margin: 0 0 28px 39%;
-    color:#333;
+    text-align: center; /* Center the contents within the form */
+    margin: 0 auto 28px; /* Center the title horizontally */
+    color: #333;
 }
 
 .doccare-edit-container form .fields {
