--- a/app/static/base_style.css
+++ b/app/static/base_style.css
@@ -20,9 +20,9 @@
 
 main {
     margin-left: 80px;
-    justify-content: center;
+    /* justify-content: center;
     align-items: center;
-    text-align: center;
+    text-align: center; */
     height: 100vh;
 }
 
@@ -250,21 +250,20 @@ ul li p {
 
 /* -------------------------------------------- ADD ICONS -------------------------------------------- */
 .add-icon img {
-    position: fixed;
-    top: 10px;
+    position: relative;
+    top: -10px;
     left: 95%;
     width: 40px;
-    right: 50px;
     border-radius: 100%;
-    z-index: 99;
-    z-index: 99;
-    position: fixed;
-    z-index: 99;    
-    position: fixed;
 }
 
 .add-icon img:active {
     transform: translateY(1px);
+}
+
+.add-icon.patient img {
+    top: -49px;
+    left: 94%;
 }
 
 /* -------------------------------------------- PATIENT TABLE -------------------------------------------- */
@@ -384,11 +383,12 @@ ul li p {
     border-radius: 0.25rem; 
     margin-left: 15px;
     height: 35px;
-    width: 500px;  
+    width: 200px;  
 }
 
 .dataTables_wrapper .dataTables_filter {
     position: relative;
+    margin-left: 75%;
 }
   
 .dataTables_wrapper .dataTables_filter input:focus {
@@ -716,7 +716,7 @@ textarea::-webkit-scrollbar-track {
 
 /* -------------------------------------------- REPORT BACKGROUNDS -------------------------------------------- */
 .patient-bg.report {
-    height: 2500px; 
+    height: 100%; 
 }
 
 .patient-bg.test {
