--- a/app/static/doctor_style.css
+++ b/app/static/doctor_style.css
@@ -11,6 +11,12 @@
     height: 69%;
 }
 
+.grid_container.patient {
+    grid-template-columns: auto;
+    padding: 0px;
+    height: 100vh;
+}   
+
 .grid_container.certificate {
     grid-template-columns: 50% 50%;
 }
@@ -18,7 +24,7 @@
 .grid_container.prescription {
     grid-template-columns: auto;
     grid-template-rows: auto auto;
-    height: 1400px;
+    height: 100%;
 }
 
 .grid_container.history {
@@ -305,11 +311,22 @@ input, select {
 }
 
 .patient-bg.request {
-    height: 1700px; 
+    height: 1650px; 
 }
 
 .patient-bg.prescription {
-    height: 1650px;
+    height: 100%;
+    background-color: #bae1ff;
+}
+
+.patient-bg.print {
+    position: fixed;
+    top: 0;
+    margin: 0;
+    width: 100%;
+    z-index: 99;
+    height: 100%;
+    background-color: white;
 }
 
 .patient-bg.examination {
@@ -717,6 +734,10 @@ input, select {
         box-sizing: border-box; 
     }
 
+    .sidenav-bg, .med-header.history, .segmented-controls, .update-icon, .print-icon, .navbar {
+        display: none;
+    }
+
     .patient-bg.prescription {
         display: block;
         position: absolute; 
@@ -738,6 +759,7 @@ input, select {
     background-color: transparent;
     outline: none;
     border: 0;
+    z-index: 1;
 }
 
 .print-icon img {
@@ -749,25 +771,6 @@ input, select {
 .print-icon img:active {
     transform: translateY(1px);
 }
-
-@media print {
-    /* Hide everything except the clearance_textarea */
-    body *:not(.clearance_textarea) {
-        display: none !important;
-    }
-
-    /* Adjust textarea for printing */
-    .clearance_textarea {
-        display: block !important;
-        margin: 0 auto;
-        width: 100%;
-        height: 100%;
-        overflow: auto;
-        padding: 10px;
-        box-sizing: border-box;
-    }
-}
-
 
 .prescription_table {
     position: relative; 
@@ -865,7 +868,6 @@ input, select {
 }
 
 /* SEGMENTED CONTROL */
-
 .segmented-controls {
     position: relative;
     width: 100%;
@@ -901,51 +903,12 @@ input, select {
 }
 
 /* -------------------------------------------- MEDICAL CLEARANCE AND CERTIFICATE -------------------------------------------- */
-.lab_icon {
-    position: relative;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    width: 100%;
-    background-color: transparent;
-    outline: none;
-    border: 0;
-    display: flex;
-    cursor: pointer;   
-    background-color: #f2f9ff;   
-    border-radius: 5px;
-    padding: 5px;  
+.textPrint {
+    /* margin-right: 70px; */
+    /* padding: 200px; */
+    text-align: justify;
 }
 
-.lab_icon img {
-    margin-right: 10px;
-    width: 25px;
-}
-
-.lab_icon img:active {
-    transform: translateY(1px);
-}
-
-.toggled_buttons {
-    position: relative;
-    margin-top: 20px;
-    width: 100%;
-    padding: 10px;
-    border: 1px solid var(--blueC);
-}
-
-.editor {
-    position: relative;  
-    border-radius: 0px; 
-    margin-top: 0px;
-    width: 100%; 
-    border: 1px solid var(--blueC);
-    outline: none;
-    height: 1000px;
-    padding: 30px;
-    text-align: left;
-    font-size: 15px;
-    font-family: Arial, Helvetica, sans-serif;
-}
 
 /* APPOINTMENT */
 /* style here */
